--- a/jeju.html
+++ b/jeju.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 class="title"><a href="index.html">도시들...</a></h1>
 
-        <h2>부산</h2>
+        <h2>제주도</h2>
         
         <div class="photo">
             <img src="./imgs/thumb-02.jpg" alt="한라산 전경">
