--- a/jeju.html
+++ b/jeju.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="copyright">
-            <p>copyright 2024 harimbu@gmail.com</p>
+            <p>copyright/lhamster@naver.com</p>
         </div>
     </div>
     
