--- a/gwangiu.html
+++ b/gwangiu.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="copyright">
-            <p>copyright 2024 harimbu@gmail.com</p>
+            <p>copyright/ lhamster@naver.com</p>
         </div>
     </div>
     
