--- a/daejeon.html
+++ b/daejeon.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="copyright">
-            <p>copyright 2024 harimbu@gmail.com</p>
+            <p>copyright/ lhamster@naver.com</p>
         </div>
     </div>
     
