--- a/busan.html
+++ b/busan.html
@@ -25,6 +25,9 @@
         대한민국의 제2의 도시이자 최대의 해양 도시이며, 
         부산항을 중심으로 해상 무역과 물류 산업이 발달하였다.
     </p>
+       <div class="copyright">
+            <p>copyright/lhamster@naver.com</p>
+        </div>
 </div>
 
 </body>
